# pysigma-auto-update

./: README.md  action.yml  pyproject.toml
.github/workflows/: test_action.yml
scripts/: update_pysigma.py
tests/: test_pyproject.toml  test_update_pysigma.py
